css/main.css
body {
    margin: 60px auto;
    width: 70%;
}
nav ul, footer ul {
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
    padding: 0px;
    list-style: none;
    font-weight: bold;
}

nav ul li, footer ul li {
    display: inline;
    margin-right: 20px;
    border:1px solid #cce6ff;
    border-radius: 7px;
    background-color:#cce6ff;
    padding:5px;
}

.flex-container-home-intro {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
  background-color: white;
}

.flex-container-home-intro > div {
  background-color: #FFFFFF;
  width: 1000px;
  margin: 10px;
  text-align: left;
  font-size: 1.5em;
}

.flex-container-home-intro > div > img{
  max-width: 100%;
  height: auto;
  border-radius: 50%;
  margin-top: auto;
  margin-bottom: auto;
}

a {
    text-decoration: none;
    color: #000000;
}
a:hover {
    text-decoration: underline;
}
h1 {
    font-size: 3em;
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
}
p {
    font-size: 1.5em;
    line-height: 1.4em;
    color: #333;
}
footer {
    border-top: 1px solid #d5d5d5;
    font-size: .8em;
}

ul.posts {
    margin: 20px auto 40px;
    font-size: 1.3em;
    list-style-type: circle;
}


.centered {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.codebox {
  border:2px solid #282c34;
  border-radius: 10px;
  background-color:#282c34;
  /*white-space: pre-line;*/
  padding:10px;
  font-size:1.2em;
  font-family: "Courier";
  color: #abb2bf;
  display: inline-block;
}

